Add support for cluster port number

--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 
 network.host: {{ elasticsearch_bind }}
-http.port: {{ elasticsearch_port }}
+http.port: {{ elasticsearch_port_api }}
 
 cluster.name: {{ elasticsearch_cluster_name }}
 # node.name: node-1
