Set DATA)DIR in Debian defaults file

--- a/templates/elasticsearch.j2
+++ b/templates/elasticsearch.j2
@@ -17,7 +17,7 @@ MAX_OPEN_FILES=65535
 #CONF_DIR=/etc/elasticsearch
 #CONF_FILE=/etc/elasticsearch/elasticsearch.yml
 #PID_DIR=/var/run/elasticsearch
-#DATA_DIR={{ elasticsearch_data_dir | default(elasticsearch_default_data_dir) }}
+DATA_DIR={{ elasticsearch_data_dir | default(elasticsearch_default_data_dir) }}
 #WORK_DIR=/tmp/elasticsearch
 #LOG_DIR=/var/log/elasticsearch
 #ES_GC_LOG_FILE=/var/log/elasticsearch/gc.log
