--- a/templates/elasticsearch.j2
+++ b/templates/elasticsearch.j2
@@ -4,7 +4,7 @@
 #ES_GROUP=elasticsearch
 
 MAX_LOCKED_MEMORY=unlimited
-ES_HEAP_SIZE={{ ansible_memtotal_mb // 2 }}m
+ES_HEAP_SIZE={{ elasticsearch_heap_size }}
 #ES_HEAP_NEWSIZE=
 #ES_DIRECT_SIZE=
 
